<resources>
    <string name="app_name">ExperimentTo-The-Moon-</string>
    <string name="add_experiment">Add Experiment</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="owner">Owner</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="experiment_date">Experiment date</string>
    <string name="experiment_description">Experiment description</string>
    <string name="failures">failures</string>
    <string name="button">Button</string>
    <string name="successes">successes</string>
    <string name="title_activity_display_user_profile">DisplayUserProfile</string>
    <string name="subscribe_box_text">Subscribe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings used for statistics -->
    <string name="mean">Mean</string>
    <string name="median">Median</string>
    <string name="q1">1st Quartile</string>
    <string name="std_variation">Standard Deviation</string>
    <string name="sum">Sum</string>
    <string name="total_trials">Total Trials</string>
    <string name="q3">3rd Quartile</string>
    <string name="min">Minimum</string>
    <string name="max">Maximum</string>
    <string name="percent_pass">Percentage Success</string>
    <string name="histogram">Histogram</string>
    <string name="plot">Plot</string>
    <string name="close">Close</string>
    <string name="statistics">Statistics</string>
    <string name="participate">Participate</string>
    <string name="questions">Q&amp;A</string>
    <!-- Strings used for the home page -->
    <string name="search_bar">Search</string>
    <string name="profile">Profile</string>
    <string name="go">Go</string>
    <string name="subscription_list">Subscription List</string>
    <string name="experiment_list">Experiment List</string>
    <string name="scan">Scan QR/Bar</string>
    <!-- Strings used for user profiles -->
    <string name="user_id">User ID</string>
    <string name="contact_info">Contact Info</string>
    <string name="go_back">GO_BACK</string>
    <string name="update">UPDATE</string>

    <!-- Strings used for Trials   -->
    <string name="results">Enter the Results</string>
    <string name="enterUserID">Enter your User ID</string>
    <string name="Count">Count</string>
    <string name="nonNegativeInt">Non Negative Integer</string>
    <string name="binomialTrial">Binomial Trial</string>
    <string name="Measurement">Measurement</string>
    <string name="add">Add</string>
    <string name="unpublish">unpublish</string>
    <string name="blacklist">blacklist</string>
    <string name="view_all_trials">view trials</string>
    <string name="delete">delete</string>
    <string name="subscribe">Subscribe</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_a_uid">Enter a UID</string>
    <string name="search_profile">Search profile</string>
    <string name="geolocation">Geolocation</string>
    <string name="enter_geolocation">Enter Geolocation</string>
    <string name="latitude">Latitude</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="end">End</string>
    <string name="generate_qr_bar_code">Generate QR/Bar Code</string>
    <string name="publish">publish</string>
    />

    <string-array name="spinner_trial_types">
        <item>Non-Neg Integer</item>
        <item>Binomial</item>
        <item>Count</item>
        <item>Measurement</item>
    </string-array>

    <string-array name="spinner_qr_types_count">
        <item>1</item>
    </string-array>

    <string-array name="spinner_qr_types_NNI">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="spinner_boolean_types">
        <item>Pass</item>
        <item>Fail</item>
    </string-array>

</resources>