<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/latitude_coordinate"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/enter_latitude" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/longitude_coordinate"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="399dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/enter_longitude" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nonnegint_result"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/results" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/measurement_result"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/results" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/count_result"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/results" />

    <TextView
        android:id="@+id/trial_uid_edittext"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/enterUserID" />

    <TextView
        android:id="@+id/trial_uid_textbox"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:text="@string/user_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/count_textbox"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/Count"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/nonnegint_textbox"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/nonNegativeInt"
        android:textSize="18sp" />

    <!--Spinner was found out on https://developer.android.com/guide/topics/ui/controls/spinner -->

    <TextView
        android:id="@+id/measurement_textbox"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="210dp"
        android:gravity="center"
        android:text="@string/Measurement"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/binomial_textbox"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="273dp"
        android:gravity="center"
        android:text="@string/binomialTrial"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/latitude_textbox"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="false"
        android:layout_centerVertical="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="336dp"
        android:gravity="center"
        android:text="@string/latitude"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/longitude_textbox"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="false"
        android:layout_centerVertical="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="399dp"
        android:gravity="center"
        android:text="@string/longitude"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="0dp" />

</RelativeLayout>