<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMinBin"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min" />

        <TextView
            android:id="@+id/textViewMinValBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewQ1Bin"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/q1" />

        <TextView
            android:id="@+id/textViewQ1ValBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMeanBin"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mean" />

        <TextView
            android:id="@+id/textViewMeanValBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMedianBin"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/median" />

        <TextView
            android:id="@+id/textViewMedianValBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewQ3Bin"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/q3" />

        <TextView
            android:id="@+id/textViewQ3ValBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMaxBin"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/max" />

        <TextView
            android:id="@+id/textViewMaxValBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewStdVBin"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/std_variation" />

        <TextView
            android:id="@+id/textViewStdValBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTotalBin"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_trials" />

        <TextView
            android:id="@+id/textViewTotalValBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPercentSuccess"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/percent_pass" />

        <TextView
            android:id="@+id/textViewTotalPercentSuccessVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/histogram" />

        <Button
            android:id="@+id/button2Bin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plot" />

        <Button
            android:id="@+id/button3Bin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />
    </LinearLayout>

</LinearLayout>