<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:id="@+id/experiment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/name"
            android:textSize="30sp">

        </TextView>

        <TextView
            android:id="@+id/experiment_owner_username"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:text="@string/owner"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:gravity="center"
        android:id="@+id/experiment_status"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:padding="15dp"
        android:paddingTop="15dp"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/experiment_description"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"

        android:nestedScrollingEnabled="true"
        android:padding="15dp"
        android:paddingTop="15dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="20sp">

    </TextView>

</LinearLayout>