<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMin"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewMinVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewQ1"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/q1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewQ1Val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMean"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mean"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewMeanVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMedian"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/median"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewMedianVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewQ3"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/q3"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textViewQ3Val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMax"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/max"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textViewMaxVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewStdV"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/std_variation"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textViewStdVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_trials"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textViewTotalVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/histogram_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/histogram"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/plot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plot"
            android:textSize="24sp"/>
    </LinearLayout>

</LinearLayout>