<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/subscription_list"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/subscription_list_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subscription_list_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/subscription_list"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/subscription_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

    <ListView
        android:id="@+id/subscription_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#E8EAF6"
        app:layout_constraintBottom_toTopOf="@+id/experiment_list_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscription_list_tag" />

    <TextView
        android:id="@+id/experiment_list_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/experiment_list"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/home_experiment_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/subscription_list"
        app:layout_constraintTop_toBottomOf="@+id/subscription_list" />
    <!--android:layout_marginBottom="460dp"
    app:layout_constraintBottom_toBottomOf="parent"-->

    <ListView
        android:id="@+id/home_experiment_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#C5CAE9"
        app:layout_constraintBottom_toTopOf="@+id/home_add_exp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/subscription_list"
        app:layout_constraintTop_toBottomOf="@+id/experiment_list_tag">

    </ListView>

    <Button
        android:id="@+id/home_add_exp_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_experiment"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_profile_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_experiment_list" />

    <Button
        android:id="@+id/home_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_add_exp_button"
        app:layout_constraintTop_toBottomOf="@+id/home_experiment_list" />

</androidx.constraintlayout.widget.ConstraintLayout>