<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CalendarView
        android:id="@+id/edit_experiment_date_calendarView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_experiment_description_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_experiment_date_calendarView"
        android:importantForAutofill="no"
        android:maxLength="40"
        tools:ignore="LabelFor"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_experiment_description_editText">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/failure_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/failures"
                android:textAlignment="center" />

            <Button
                android:id="@+id/failureButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:insetLeft="4dp"
                android:insetRight="2dp"
                android:textSize="50sp"
                android:backgroundTint="@android:color/holo_red_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/success_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/successes"
                android:textAlignment="center" />

            <Button
                android:id="@+id/successButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:insetLeft="2dp"
                android:insetRight="4dp"
                android:textSize="50sp"
                android:backgroundTint="@android:color/holo_green_dark" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/experiment_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experiment_summary">

        <Button
            android:id="@+id/statistics_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/statistics" />

        <Button
            android:id="@+id/participate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/participate" />

        <Button
            android:id="@+id/questions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/questions" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>